--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Query</title>
-    <link rel="stylesheet" href="estilos/style.css" media="all">
-    <link rel="stylesheet" href="estilos/styleL.css" media="screen and (orientation: landscape)">
-    <link rel="stylesheet" href="estilos/styleP.css" media=" screen and (orientation: portrait)">
+    <link rel="stylesheet" href="mq001/estilos/style.css" media="all">
+    <link rel="stylesheet" href="mq001/estilos/styleL.css" media="screen and (orientation: landscape)">
+    <link rel="stylesheet" href="mq001/estilos/styleP.css" media=" screen and (orientation: portrait)">
 </head>
 <body>
     <header>
